--- a/main.tex
+++ b/main.tex
@@ -80,6 +80,26 @@
         numbers=left,
         xleftmargin=.05\textwidth
       }
+
+\lstdefinestyle{javaStyle}{
+    language=Java,
+    basicstyle=\ttfamily\small,
+    keywordstyle=\color{blue},
+    commentstyle=\color{green!70!black},
+    stringstyle=\color{orange},
+    numbers=left,
+    numberstyle=\tiny\color{gray},
+    stepnumber=1,
+    numbersep=5pt,
+    tabsize=4,
+    showspaces=false,
+    showstringspaces=false,
+    frame=none,
+    breaklines=true,
+    breakatwhitespace=false,
+    captionpos=b,
+    escapeinside={(*@}{@*)},
+}
 % \usepackage{algorithm}
 % \usepackage{algorithmicx}
 % \usepackage{algorithm2e}
